# to_video

./: .gitignore  Cargo.toml  config.json
src/: error.rs  main.rs  prelude.rs
src/imageproc/: pixelops.rs
src/imageproc/drawing/: draw_text.rs  mod.rs
src/parse_data/: duration.rs  mod.rs  simple_rng.rs
src/slides/: mod.rs  slide.rs
src/swiping_img/: chunk.rs  draw.rs  mod.rs
src/swiping_img/imageproc/: mod.rs  point.rs
src/swiping_img/imageproc/drawing/: conics.rs  draw.rs  draw_mut.rs  draw_text.rs  line.rs  mod.rs  polygon.rs  rect.rs  text.rs
