[package]
name = "to_video"
version = "0.1.0"
edition = "2021"

[dependencies]
ab_glyph = { version = "0.2.29", default-features = false, features = ["std"] }
image = { version = "0", default-features = false, features = ["png"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1" }
structs = { path = "../structs" }
